# marketplacetf-api

./: Cargo.toml  README.md
examples/: get_bots.rs  get_sales.rs
src/: error.rs  lib.rs
src/api/: api.rs  api_response.rs  error.rs  helpers.rs  marketplace_api.rs  mod.rs
src/api/fixtures/: get_bans.json  sales.json
src/request/: mod.rs  sale.rs
src/response/: bot.rs  mod.rs  user_ban.rs
src/response/dashboard/: details.rs  item.rs  mod.rs
src/response/sale/: item.rs  mod.rs  sale.rs
