[package]
name = "marketplacetf-api"
version = "0.1.0"
edition = "2021"
description = "Interface for marketplace.tf API endpoints."
authors = ["Julia"]
homepage = "https://github.com/juliarose/marketplacetf-api"
repository = "https://github.com/juliarose/marketplacetf-api"
license = "MIT"
keywords = ["tf2", "steam"]
readme = "README.md"

[dependencies]
reqwest = { version = "^0.11.7", features = ["json", "cookies"] }
reqwest-retry = "0.1.3"
reqwest-middleware = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.11.0"
serde_repr = "0.1"
strum = { version = "0.23", features = ["derive"] }
strum_macros = "0.23"
chrono = { version = "0.4", features = ["serde"] }
tf2-enum = "^0.8.0"
steamid-ng = "1.0.0"
anyhow = "^1.0"
thiserror = "^1.0.30"
tf2-sku = "^0.3.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
