[package]
name = "marketplacetf-api"
version = "0.1.0"
edition = "2021"
description = "Interface for marketplace.tf API endpoints."
authors = ["Julia"]
homepage = "https://github.com/juliarose/marketplacetf-api"
repository = "https://github.com/juliarose/marketplacetf-api"
license = "MIT"
keywords = ["tf2", "steam"]
readme = "README.md"

[dependencies]
reqwest = { version = "^0.12", features = ["json", "cookies", "gzip", "http2", "native-tls-alpn"], default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_with = "^1.11"
serde_repr = "^0.1"
strum = { version = "^0.23", features = ["derive"] }
strum_macros = "^0.23"
chrono = { version = "^0.4", features = ["serde"] }
steamid-ng = "^1.0"
anyhow = "^1.0"
thiserror = "^2.0"
tf2-sku = "^0.5.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
